[package]
name = "broadcast"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]

[dependencies]
grpc            = "0.2.1"
protobuf        = "1.*"
futures         = "0.*"
futures-cpupool = "0.1.*"
tls-api         = "0.*"
httpbis         = "0.4.1"

[[bin]]
name = "server"
path = "src/bin/server.rs"

